<resources>
    <string name="app_name">VideoMaking</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="likes">Likes</string>
    <string name="_287">287</string>
    <string name="_122k">122k</string>
    <string name="reuse">Reuse</string>
    <string name="friends">FRIENDS</string>
    <string name="popular">POPULAR</string>
    <string name="collab">COLLAB</string>
    <string name="todo">TODO</string>
    <string name="_7s">7s</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="audio_permission">Record Audio permission is required</string>
    <string name="audio_permission_not_grant">Record Audio Permission not granted</string>
    <string name="storage_permission">Storage permission is required to play Video</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="navigation">Navigation</string>
    <string name="profile">Profile</string>
    <string name="wrong_selection">Wrong selection</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="friend_click">Friend button is click</string>
    <string name="popular_click">Popular button is click</string>
    <string name="collab_click">Collab button is click</string>
    <string name="load_data">Load data</string>
    <string name="click_save">Click to save video!</string>
    <string name="camera_check">Camera is required to use this app</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <string name="copy_link">Copy Link</string>
    <string name="facebook">Facebook</string>
    <string name="report_video">Report Video</string>
    <string name="save">Save</string>
    <string name="no_video_found">No video Found</string>
    <string name="bad_request">Bad Request</string>
    <string name="internet_issue">Internet Issue</string>
    <string name="big_issue">Some Big Issue</string>
    <string name="internet_disconnected">internet disconnected</string>
    <string name="permission_automatically_grant">permission automatically granted</string>
    <string name="storage_permission_not_grant">Storage Permission not granted</string>
    <string name="camera_permission_required">Camera permission is required to access camera</string>
    <string name="camera_permission_not_grant">Camera Permission not granted</string>


</resources>
