<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_custom_bottom_sheet"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/share"
        android:textSize="@dimen/spacing_18"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_message"
            android:gravity="center"
            android:text="@string/message" />

        <TextView
            android:id="@+id/tv_whatsApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_whatsapp"
            android:gravity="center"
            android:text="@string/whatsapp" />

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_instagram"
            android:gravity="center"
            android:text="@string/instagram" />

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_fb"
            android:gravity="center"
            android:text="@string/facebook" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_copy_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_copy_link"
            android:gravity="center"
            android:text="@string/copy_link" />

        <TextView
            android:id="@+id/report_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_report"
            android:gravity="center"
            android:text="@string/report_video" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feed_video_share_save"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_16"
        android:background="@color/gray_300" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:theme="@style/ButtonGray" />

</LinearLayout>