<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:elevation="@dimen/spacing_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/size_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:contentDescription="@string/todo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_toEndOf="@+id/profile_img"
            android:text="@string/username"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_userName"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_toEndOf="@+id/profile_img"
            android:text="@string/name" />
    </RelativeLayout>
</android.support.v7.widget.CardView>