<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CommentFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_view">

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_large"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_likers_list_heart" />

        <TextView
            android:id="@+id/tv_number_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_toEndOf="@+id/iv_like"
            android:text="@string/_287"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_toEndOf="@+id/tv_number_likes"
            android:text="@string/likes"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/spacing_large"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_likers_list_down_arrow" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_on_fragment"
        android:background="@color/gray_3" />

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycles_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:scrollbars="vertical" />

</LinearLayout>